--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Site Title -->
-    <title>Jacqueline Mattos| CV</title>
+    <title>Jacqueline Mattos | CV</title>
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Font Owesome File -->
@@ -49,7 +49,7 @@
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item"><a class="nav-link" href="#" data-scroll="se-2">About Me</a></li>
                             <li class="nav-item"><a class="nav-link" href="#" data-scroll="se-4">Publications</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#" data-scroll="se-5">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#" data-scroll="se-5">CV</a></li>
                         </ul>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="image-header text-center">
-                                <img class="img-fluid" src="" alt="image">
+                                <img class="img-fluid" src="/files/facebook2-2.jpg" alt="image">
                                 <div class="icons-head">
                                     <a href="" target="_blank"><i
                                             class="fab fa-researchgate icon-style"></i></a>
@@ -74,8 +74,8 @@
                             <div class="text-header">
                                 <h1>
                                     <span class="color-name">Jacqueline Mattos</span><br><br>
-                                    <span class="subtitle">Plant biologist and Bioinformatician</span><br>
-                                    <span class="subtitle">University of Campinas - UNICAMP - Brasil</span>
+                                    <span class="subtitle">Molecular Ecologist and Bioinformatician</span><br>
+                                    <span class="subtitle">University of Campinas/UNICAMP - Brazil</span>
                                 </h1>
                             </div>
                         </div>
