--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="image-header text-center">
                                 <img class="img-fluid" src="/files/facebook2-2.jpg" alt="image">
                                 <div class="icons-head">
-                                    <a href="" target="_blank"><i
+                                    <a href="https://www.researchgate.net/profile/Jacqueline-De-Mattos" target="_blank"><i
                                             class="fab fa-researchgate icon-style"></i></a>
                                     <a href="https://github.com/jacquelinemattos" target="_blank"><i
                                             class="fab fa-github icon-style"></i></a>
@@ -75,7 +75,8 @@
                                 <h1>
                                     <span class="color-name">Jacqueline Mattos</span><br><br>
                                     <span class="subtitle">Molecular Ecologist and Bioinformatician</span><br>
-                                    <span class="subtitle">University of Campinas/UNICAMP - Brazil</span>
+                                    <span class="subtitle">University of Campinas/UNICAMP (Brazil)</span>
+                                    <span class="subtitle">University of Colorado Boulder (USA)</span>
                                 </h1>
                             </div>
                         </div>
