--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                                 <h1>
                                     <span class="color-name">Jacqueline Mattos</span><br><br>
                                     <span class="subtitle">Molecular Ecologist and Bioinformatician</span><br>
-                                    <span class="subtitle">University of Campinas/UNICAMP (Brazil)</span>
-                                    <span class="subtitle">University of Colorado Boulder (USA)</span>
+                                    <span class="subtitle">University of Campinas (Brazil)</span>
                                 </h1>
                             </div>
                         </div>
