--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                             <div class="text-header">
                                 <h1>
                                     <span class="color-name">Jacqueline Mattos</span><br><br>
-                                    <span class="subtitle">Molecular Ecologist and Bioinformatician</span><br>
-                                    <span class="subtitle">University of Campinas (Brazil)</span>
+                                    <span class="subtitle">Evolutionary Biologist and Bioinformatician</span><br>
+                                    <span class="subtitle">PhD Student at University of Campinas (Brazil)</span>
                                 </h1>
                             </div>
                         </div>
