--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <div class="cc-profile-image"><a href="#"><img src="images/facebook2-2.jpg" alt="Image"/></a></div>
           <div class="h2 title">Jacqueline Salvi de Mattos</div>
           <p class="category text-white">Biologist & Bioinformatician</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">PhD Student at University of Campinas/Brazil</p>
         </div>
       </div>
       <div class="section">
@@ -71,7 +72,7 @@
             <p>Hello, I'm Jacqueline. </p>
             <p></p>
         </div>
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-12 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row mt-3">
@@ -512,6 +513,7 @@
     <footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="text-center text-muted">
+        <p>Jacqueline Mattos</p>
         <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
       </div>
     </footer>
