--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/facebook2-2.jpg" alt="Image"/></a></div>
           <div class="h2 title">Jacqueline Salvi de Mattos</div>
-          <p class="category text-white">Biologist & Bioinformatician</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Biologist & Bioinformatician</p>
           <p class="category text-white">PhD Student at University of Campinas/Brazil</p>
+          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
