--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Research</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#research">Research</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Publications</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
@@ -50,6 +50,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/facebook2-2.jpg" alt="Image"/></a></div>
           <div class="h2 title">Jacqueline Salvi de Mattos</div>
+          <p></p>
           <p class="category text-white">Biologist & Bioinformatician</p>
           <p class="category text-white">PhD Student at University of Campinas/Brazil</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
