--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p></p>
           <p class="category text-white">Biologist & Bioinformatician</p>
           <p class="category text-white">PhD Student at University of Campinas/Brazil</p>
-          <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
