--- a/index.html
+++ b/index.html
@@ -68,10 +68,15 @@
   <div class="container">
     <div class="card" data-aos="fade-up" data-aos-offset="10">
       <div class="row">
-        <div class="col-lg-6 col-md-12">
+        <div class="col-lg-12 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello, I'm Jacqueline. </p>
+            <p>Hello, I'm Jacqueline. I'm a PhD student from Brazil (UNICAMP - University of Campinas), currently collaborating and working at The Kane Lab (University of Colorado Boulder) as
+            Visiting Researcher. My work is mainly focused on population genomics of an orchid species which is widely distributed
+            along the Brazilian coast, in the Brazilian Atlantic Forest - a highly impacted and deforested biome. I am using a lot
+            of bioinformatics methods and computational tools to assemble the species' whole genome on chromosome level, and also to
+            investigate evolutionary mechanisms (such as natural selection and genetic drift) along its distribution. My project
+            aims to answer broad evolutionary and ecological questions through the use of highly innovative tools. </p>
             <p></p>
         </div>
         <div class="col-lg-12 col-md-12">
