--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             aims to answer broad evolutionary and ecological questions through the use of highly innovative tools. </p>
             <p></p>
         </div>
-        <div class="col-lg-12 col-md-12">
+        <!--<div class="col-lg-12 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row mt-3">
@@ -95,12 +95,11 @@
               <div class="col-sm-8">Denver, Colorado</div>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
 </div>
-<!--
 <div class="section" id="skill">
   <div class="container">
     <div class="h4 text-center mb-4 title">Professional Skills</div>
@@ -514,6 +513,7 @@
       </div>
     </div>
   </div>
+-->
 -->
 </div></div>
     </div>
