--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">PhD Student</div>
-            <p></p>
+            <p>The use of genomics and bioinformatics in the integrative study of a neotropical orchid: implications on evolutionary
+            processes and species conservation</p>
           </div>
         </div>
       </div>
