--- a/index.html
+++ b/index.html
@@ -300,14 +300,14 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <!--<p>March 2021 - Present</p>
-            <div class="h5">UNICAMP/Brazil</div>-->
-            <img src="images/DSC_0023.JPG" alt="Image" />
+            <p>March 2021 - Present</p>
+            <div class="h5">University of Campinas/Brazil</div>
+            <!--<img src="images/DSC_0023.JPG" alt="Image" />-->
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">PhD (University of Campinas - Brazil)</div>
+            <div class="h5">PhD</div>
             <p>The use of genomics and bioinformatics in the integrative study of a neotropical orchid: implications on evolutionary
             processes and species conservation</p>
           </div>
