--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <p></p>
           <p class="category text-white">Biologist & Bioinformatician</p>
           <p class="category text-white">PhD Student at University of Campinas/Brazil</p>
+          <p class="category text-white">Visiting Researcher at University of Colorado Boulder/USA</p>
           <!--<a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
         </div>
       </div>
