--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
     </div>
   </div>
 </div>
-<!--
-<div class="section" id="portfolio">
+<!--<div class="section" id="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
@@ -301,9 +300,10 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>March 2021 - Present</p>
-            <div class="h5">University of Campinas/Brazil</div>
+            <!--<p>March 2021 - Present</p>
+            <div class="h3">University of Campinas/Brazil</div>-->
             <!--<img src="images/DSC_0023.JPG" alt="Image" />-->
+            <img src="images/DSC_0023.JPG" class="card-img" alt="...">
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
