--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/twitter-photo-jac.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/facebook2-2.jpg" alt="Image"/></a></div>
           <div class="h2 title">Jacqueline Salvi de Mattos</div>
           <p></p>
           <p class="category text-white">Biologist & Bioinformatician</p>
