--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <!--<p>March 2021 - Present</p>
-            <div class="h3">University of Campinas/Brazil</div>-->
+            <p>March 2021 - Present</p>
+            <div class="h3">University of Campinas/Brazil</div>
             <!--<img src="images/DSC_0023.JPG" alt="Image" />-->
-            <img src="images/DSC_0023.JPG" class="card-img-top" alt="...">
+            <!--<img src="images/DSC_0023.JPG" class="card-img-top" alt="...">-->
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
