--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>March 2021 - Present</p>
+            <p>PhD</p>
             <div class="h6">University of Campinas/Brazil</div>
             <!--<img src="images/DSC_0023.JPG" alt="Image" />-->
             <!--<img src="images/DSC_0023.JPG" class="card-img-top" alt="...">-->
@@ -308,7 +308,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">PhD</div>
+            <div class="h5">Genomics and Evolution of Wild Plant Populations</div>
             <p>The use of genomics and bioinformatics in the integrative study of a neotropical orchid: implications on evolutionary
             processes and species conservation</p>
           </div>
