--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Chloroplast genome evolution & phylogenomics</div>
+            <div class="h5">Chloroplast genome evolution & phylogenetics</div>
           </div>
         </div>
       </div>
