--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
         <div class="col-lg-12 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello, I'm Jacqueline. I'm a PhD student from Brazil (UNICAMP - University of Campinas), currently collaborating and working at The Kane Lab (University of Colorado Boulder) as
-            Visiting Researcher. My work is mainly focused on population genomics of an orchid species which is widely distributed
-            along the Brazilian coast, in the Brazilian Atlantic Forest - a highly impacted and deforested biome. I am using a lot
-            of bioinformatics methods and computational tools to assemble the species' whole genome on chromosome level, and also to
-            investigate evolutionary mechanisms (such as natural selection and genetic drift) along its distribution. My project
-            aims to answer broad evolutionary and ecological questions through the use of highly innovative tools. </p>
+            <p>
+          I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
+          bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
+          and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
+          version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
+          de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with
+          many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
+</p>
             <p></p>
         </div>
         <!--<div class="col-lg-12 col-md-12">
