--- a/index.html
+++ b/index.html
@@ -300,14 +300,12 @@
     <div class="h4 text-center mb-4 title">Research</div>
     <div class="card">
       <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+        <!--<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
             <p>PhD</p>
             <div class="h6">University of Campinas/Brazil</div>
-            <!--<img src="images/DSC_0023.JPG" alt="Image" />-->
-            <!--<img src="images/DSC_0023.JPG" class="card-img-top" alt="...">-->
           </div>
-        </div>
+        </div>-->
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Genomics and Evolution of Orchid Populations</div>
