--- a/index.html
+++ b/index.html
@@ -308,9 +308,8 @@
         </div>-->
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Genomics and Evolution of Orchid Populations</div>
-            <p>The use of genomics and bioinformatics in the integrative study of a neotropical orchid: implications on evolutionary
-            processes and species conservation</p>
+            <div class="h5">Evolutionary genomics of orchid populations in the coast of Brazil</div>
+            <p></p>
           </div>
         </div>
       </div>
