--- a/index.html
+++ b/index.html
@@ -346,6 +346,22 @@
         </div>
       </div>
     </div>
+
+    <div class="card">
+      <div class="row">
+        <!--<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+              <div class="card-body cc-experience-header">
+                <p>PhD</p>
+                <div class="h6">University of Campinas/Brazil</div>
+              </div>
+            </div>-->
+        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Gene expression and exploration of natural selection patterns along a latitudinal gradient</div>
+          </div>
+        </div>
+      </div>
+    </div>
   
   </div>
 </div>
