--- a/index.html
+++ b/index.html
@@ -383,6 +383,29 @@
         </div>
       </div>
     </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Plant Ecology</div>
+            <p>MATTOS, J.S., MORELLATO, L.P.C., CAMARGO, M.G.G., BATALHA, M.A. 2019. Plant phylogenetic diversity of tropical
+            mountaintop rocky grasslands: local and regional constraints. Plant Ecology. DOI:
+            HTTPS://DOI.ORG/10.1007/S11258-019-00982-5</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Botanical Journal of the Linnean Society</div>
+            <p>MATTOS, J.S., MORELLATO, L.P.C., BATALHA, M.A. 2021. Plant communities in tropical ancient mountains: how are they
+            spatially and evolutionary structured? Botanical Journal of the Linnean Society. January 2021.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <!--
