--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#research">Research</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Publications</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#publications">Publications</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Photos</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -79,8 +80,7 @@
           version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
           de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with
           many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
-</p>
-            <p></p>
+            </p>
         </div>
         <!--<div class="col-lg-12 col-md-12">
           <div class="card-body">
@@ -366,7 +366,7 @@
   </div>
 </div>
 
-<div class="section">
+<div class="section" id="publications">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Publications</div>
     <div class="card">
