--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
   </div>
 </div>
-<!--<div class="section" id="portfolio">
+<div class="section" id="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
@@ -293,7 +293,7 @@
     </div>
   </div>
 </div>
--->
+
 
 <div class="section" id="research">
   <div class="container cc-experience">
