--- a/index.html
+++ b/index.html
@@ -294,25 +294,25 @@
     <div class="tab-pane active" id="web-development">
       <div class="ml-auto mr-auto">
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-4">
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a
                 href="#epidendrum">
                 <figure class="cc-effect"><img src="images/DSC_0023.JPG" alt="Image" />
                   <figcaption>
                     <div class="h4">Epidendrum fulgens</div>
-
                   </figcaption>
                 </figure>
-              </a></div>
+              </a>
+            </div>
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a
                 href="#floripa">
                 <figure class="cc-effect"><img src="images/floripa_2.jpg" alt="Image" />
                   <figcaption>
                     <div class="h4">Florianópolis</div>
-
                   </figcaption>
                 </figure>
-              </a></div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
