--- a/index.html
+++ b/index.html
@@ -294,9 +294,8 @@
     <div class="tab-pane active" id="web-development">
       <div class="ml-auto mr-auto">
         <div class="row">
-          <div class="col-md-4">
-            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a
-                href="#epidendrum">
+          <div class="col-md-12">
+            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#epidendrum">
                 <figure class="cc-effect"><img src="images/DSC_0023.JPG" alt="Image" />
                   <figcaption>
                     <div class="h4">Epidendrum fulgens</div>
@@ -304,8 +303,7 @@
                 </figure>
               </a>
             </div>
-            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a
-                href="#floripa">
+            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
                 <figure class="cc-effect"><img src="images/floripa_2.jpg" alt="Image" />
                   <figcaption>
                     <div class="h4">Florianópolis</div>
