--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   </div>
 </div>
 
-<div class="section" id="gallery>
+<div class="section" id="gallery">
   <div class=" container">
   <div class="row">
     <div class="col-md-6 ml-auto mr-auto">
