--- a/index.html
+++ b/index.html
@@ -52,15 +52,18 @@
           <div class="cc-profile-image"><a href="#"><img src="images/profile-2022.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Jacqueline Salvi de Mattos</div>
           <p></p>
-          <p class="category text-white">Biologist & Bioinformatician</p>
+          <p class="category text-white">Evolutionary Biologist | Bioinformatician</p>
           <p class="category text-white">PhD Student at University of Campinas/Brazil</p>
           <p class="category text-white">Visiting Researcher at University of Colorado Boulder/USA</p>
-          <!--<a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
+          <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container">
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github icon-style"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on ResearchGate"><i class="fa fa-researchgate icon-style"></i></a></div>
         </div>
       </div>
     </div>
