--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p class="category text-white">Evolutionary Biologist | Bioinformatician</p>
           <p class="category text-white">PhD Student at University of Campinas/Brazil</p>
           <p class="category text-white">Visiting Researcher at University of Colorado Boulder/USA</p>
-          <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <!--<a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
         </div>
       </div>
       <div class="section">
@@ -63,7 +63,7 @@
           <div class="button-container">
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/jacquelinemattos" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github icon-style"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/mattosjacq" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.researchgate.net/profile/Jacqueline-De-Mattos" rel="tooltip" title="Follow me on ResearchGate"><i class="fa fa-researchgate icon-style"></i></a></div>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.researchgate.net/profile/Jacqueline-De-Mattos" rel="tooltip" title="Follow me on ResearchGate"><i class="fab fa-researchgate icon-style"></i></a></div>
         </div>
       </div>
     </div>
