--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="button-container">
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/jacquelinemattos" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github icon-style"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/mattosjacq" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/jacqueline-salvi-de-mattos-75b750a3/" rel="tooltip" title="Follow me on Linkedin"><i class="fab fa-linkedin-in"></i></a></div>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/jacqueline-salvi-de-mattos-75b750a3/" rel="tooltip" title="Follow me on Linkedin"><i class="fa fa-linkedin-in icon-style"></i></a></div>
         </div>
       </div>
     </div>
