--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
           <div class="button-container">
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/jacquelinemattos" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github icon-style"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/mattosjacq" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/jacqueline-salvi-de-mattos-75b750a3/" rel="tooltip" title="Follow me on Linkedin"><i class="fa fa-linkedin-in icon-style"></i></a></div>
         </div>
       </div>
     </div>
@@ -310,6 +309,30 @@
                 <figure class="cc-effect"><img src="images/floripa_2.jpg" alt="Image" />
                   <figcaption>
                     <div class="h4">Florianópolis</div>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+                <figure class="cc-effect"><img src="images/mata-atlantica.jpg" alt="Image" />
+                  <figcaption>
+                    <div class="h4">Atlantic Forest</div>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+                <figure class="cc-effect"><img src="images/mata-atlantica-2.jpg" alt="Image" />
+                  <figcaption>
+                    <div class="h4">Atlantic Forest</div>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+                <figure class="cc-effect"><img src="images/itatiaia.jpg" alt="Image" />
+                  <figcaption>
+                    <div class="h4">Itatiaia National Park</div>
                   </figcaption>
                 </figure>
               </a>
