--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
   <div class=" container">
   <div class="row">
     <div class="col-md-6 ml-auto mr-auto">
-      <div class="h4 text-center mb-4 title">Field work photos</div>
+      <div class="h4 text-center mb-4 title">Nature photography</div>
       <!--<div class="nav-align-center">
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
@@ -309,22 +309,6 @@
                 <figure class="cc-effect"><img src="images/floripa_2.jpg" alt="Image" />
                   <figcaption>
                     <div class="h4">Florianópolis</div>
-                  </figcaption>
-                </figure>
-              </a>
-            </div>
-            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                <figure class="cc-effect"><img src="images/mata-atlantica.jpg" alt="Image" />
-                  <figcaption>
-                    <div class="h4">Atlantic Forest</div>
-                  </figcaption>
-                </figure>
-              </a>
-            </div>
-            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                <figure class="cc-effect"><img src="images/mata-atlantica-2.jpg" alt="Image" />
-                  <figcaption>
-                    <div class="h4">Atlantic Forest</div>
                   </figcaption>
                 </figure>
               </a>
