--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
     <div class="h4 text-center mb-4 title">Research</div>
     <div class="card">
       <div class="row">
-        <!--<div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>PhD</p>
-            <div class="h6">University of Campinas/Brazil</div>
+            <figure class="cc-effect"><img src="images/floripa_2.jpg" alt="Image" />
+            </figure>
           </div>
-        </div>-->
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Evolutionary genomics of orchid populations in the coast of Brazil</div>
             <p></p>
@@ -282,7 +282,7 @@
   <div class=" container">
   <div class="row">
     <div class="col-md-6 ml-auto mr-auto">
-      <div class="h4 text-center mb-4 title">Nature photography</div>
+      <div class="h4 text-center mb-4 title">Nature photography and field work</div>
       <!--<div class="nav-align-center">
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
