--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
     <div class="card">
       <div class="row">
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <img src="images/DSC_0023.JPG" class="card-img-top" alt="#">
           <div class="card-body">
             <div class="h5">Evolutionary genomics of orchid populations in the coast of Brazil</div>
             <p></p>
