--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 </div>
 <div class="section" id="about">
   <div class="container">
+    <div class="h4 text-center mb-4 title">About me</div>
     <div class="card" data-aos="fade-up" data-aos-offset="10">
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">About</div>
             <p>
           I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
           bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
