--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
     <div class="h4 text-center mb-4 title">Research</div>
     <div class="card">
       <div class="row">
-        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <img src="images/DSC_0023.JPG" class="card-img-top" alt="#">
+        <div class="col-md-19" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <img src="images/DSC_0023.JPG" class="card-img" alt="#">
           <div class="card-body">
             <div class="h5">Evolutionary genomics of orchid populations in the coast of Brazil</div>
             <p></p>
