--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Research</div>
     <div class="card">
-      <img src="images/facebook2-2.jpg" class="card-img">
+      <img src="images/DSC_0023.JPG" class="card-img">
       <div class="card-body">
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
             <div class="h5">Evolutionary genomics of orchid populations in the coast of Brazil</div>
