--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
         <div class="card-horizontal">
           <div class="img-square-wrapper">
-            <img class="" src="images/DSC_0023.JPG" alt="Card image cap">
+            <img class="card-img" src="images/DSC_0023.JPG" alt="Card image cap">
           </div>
           <div class="card-body">
               <div class="h5">Evolutionary genomics of orchid populations in the coast of Brazil</div>
