--- a/index.html
+++ b/index.html
@@ -169,22 +169,9 @@
 
     <div class="h4 text-center mb-4 title">Research</div>
 
-    <div class="card">
-          <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-horizontal">
-              <div class="img-square-wrapper">
-                <img class="card-img" src="images/DSC_0023.JPG" alt="Card image cap">
-              </div>
-              <div class="card-body">
-                  <div class="h5">Evolutionary genomics of orchid populations in the coast of Brazil</div>
-              </div>
-            </div>
-          </div>
-    </div>
-
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 mt-3">
+        <div class="col-12 mt-3" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card">
             <div class="card-horizontal">
               <div class="card-img">
