--- a/index.html
+++ b/index.html
@@ -71,7 +71,32 @@
 <div class="section" id="about">
   <div class="container">
     <div class="h4 text-center mb-4 title">About me</div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <div class="card" data-aos="fade-up" data-aos-offset="10">
+            <div class="card-horizontal">
+              <div class="card-img">
+                <img class="" src="images/eu-mata-atlantica.jpg" alt="Card image cap">
+              </div>
+              <div class="card-body">
+                <p>I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
+                bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
+                and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
+                version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
+                de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with
+                many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <div class="card" data-aos="fade-up" data-aos-offset="10">
+
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="card-body">
@@ -84,23 +109,6 @@
           many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
             </p>
         </div>
-        <!--<div class="col-lg-12 col-md-12">
-          <div class="card-body">
-            <div class="h4 mt-0 title">Basic Information</div>
-            <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">jsalvidemattos@gmail.com</div>
-            </div>
-            <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+1 7207426427</div>
-            </div>
-            <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Denver, Colorado</div>
-            </div>
-          </div>
-        </div>-->
       </div>
     </div>
   </div>
@@ -171,7 +179,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 mt-3" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card">
             <div class="card-horizontal">
               <div class="card-img">
