--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="card" data-aos="fade-up" data-aos-offset="10">
             <div class="card-horizontal">
               <div class="card-img">
-                <img class="" src="images/eu-mata-atlantica.jpg" alt="Card image cap">
+                <img class="card-img" src="images/eu-mata-atlantica.jpg" alt="Card image cap">
               </div>
               <div class="card-body">
                 <p>I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
