--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
   <div class=" container">
   <div class="row">
     <div class="col-md-6 ml-auto mr-auto">
-      <div class="h4 text-center mb-4 title">Nature photography and field work</div>
+      <div class="h4 text-center mb-4 title">Nature photography</div>
       <!--<div class="nav-align-center">
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
@@ -280,22 +280,6 @@
       <div class="ml-auto mr-auto">
         <div class="row">
           <div class="col-md-12">
-            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#epidendrum">
-                <figure class="cc-effect"><img src="images/DSC_0023.JPG" alt="Image" />
-                  <figcaption>
-                    <div class="h4">Epidendrum fulgens</div>
-                  </figcaption>
-                </figure>
-              </a>
-            </div>
-            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                <figure class="cc-effect"><img src="images/floripa_2.jpg" alt="Image" />
-                  <figcaption>
-                    <div class="h4">Florianópolis</div>
-                  </figcaption>
-                </figure>
-              </a>
-            </div>
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
                 <figure class="cc-effect"><img src="images/itatiaia.jpg" alt="Image" />
                   <figcaption>
@@ -304,6 +288,23 @@
                 </figure>
               </a>
             </div>
+          </div>
+          <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+              <figure class="cc-effect"><img src="images/milky-way-vail.png" alt="Image" />
+                <figcaption>
+                  <div class="h4">Milky Way in Vail, Colorado</div>
+                </figcaption>
+              </figure>
+            </a>
+          </div>
+          <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+              <figure class="cc-effect"><img src="images/cerrado.jpg" alt="Image" />
+                <figcaption>
+                  <div class="h4">Cerrado in São Carlos, Brasil</div>
+                </figcaption>
+              </figure>
+            </a>
+          </div>
           </div>
         </div>
       </div>
