--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
     <div class="h4 text-center mb-4 title">Research</div>
 
+    <!--
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -169,8 +170,7 @@
           </div>
         </div>
       </div>
-    </div>
-
+    </div>-->
 
     
     <div class="card">
