--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
       <div class="ml-auto mr-auto">
         <div class="row">
           <div class="col-md-12">
+
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
                 <figure class="cc-effect"><img src="images/itatiaia.jpg" alt="Image" />
                   <figcaption>
@@ -288,23 +289,24 @@
                 </figure>
               </a>
             </div>
-          </div>
-          <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-              <figure class="cc-effect"><img src="images/milky-way-vail.png" alt="Image" />
-                <figcaption>
-                  <div class="h4">Milky Way in Vail, Colorado</div>
-                </figcaption>
-              </figure>
-            </a>
-          </div>
-          <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-              <figure class="cc-effect"><img src="images/cerrado.jpg" alt="Image" />
-                <figcaption>
-                  <div class="h4">Cerrado in São Carlos, Brasil</div>
-                </figcaption>
-              </figure>
-            </a>
-          </div>
+            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+                <figure class="cc-effect"><img src="images/milky-way-vail.png" alt="Image" />
+                  <figcaption>
+                    <div class="h4">Milky Way in Vail, Colorado</div>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+            <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
+                <figure class="cc-effect"><img src="images/mata-atlantica.jpg" alt="Image" />
+                  <figcaption>
+                    <div class="h4">Atlantic Forest, Brazil</div>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+
+            
           </div>
         </div>
       </div>
