--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
     <div class="tab-pane active" id="web-development">
       <div class="ml-auto mr-auto">
         <div class="row">
+
           <div class="col-md-12">
 
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
@@ -298,9 +299,9 @@
               </a>
             </div>
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#floripa">
-                <figure class="cc-effect"><img src="images/mata-atlantica.jpg" alt="Image" />
+                <figure class="cc-effect"><img src="images/via-lactea-2.jpg" alt="Image" />
                   <figcaption>
-                    <div class="h4">Atlantic Forest, Brazil</div>
+                    <div class="h4">Milky Way in São Carlos, Brazil</div>
                   </figcaption>
                 </figure>
               </a>
