--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
 <div class="section" id="publications">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Publications</div>
+
+    <div class="h5 mb-4 title">2017</div>
     <div class="card">
       <div class="row">
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -235,6 +237,7 @@
         </div>
       </div>
     </div>
+    <div class="h5 mb-4 title">2019</div>
     <div class="card">
       <div class="row">
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -247,6 +250,7 @@
         </div>
       </div>
     </div>
+    <div class="h5 mb-4 title">2021</div>
     <div class="card">
       <div class="row">
         <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
