--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
     <div class="h4 text-center mb-4 title">About me</div>
 
     <div class="card" data-aos="fade-up" data-aos-offset="10">
-
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="card-body">
@@ -85,9 +84,36 @@
           de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with
           many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.
             </p>
+          </div>
         </div>
       </div>
     </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card">
+            <div class="card-horizontal">
+              <div class="card-img">
+                <img class="" src="images/facebook2-2.jpg" alt="Card image cap">
+              </div>
+              <div class="card-body">
+                <p>I have a BSc in Biological Sciences and I am currently pursuing my PhD degree, having my research focus on genomics and
+                bioinformatics for an evolutionary biology approach. For research purposes, I have had training in both R and Python,
+                and I am also skilled in Linux command line, bash scripting, SQL, High Performance Computing (HPC), GitHub and Git
+                version control, and many genomic/bioinformatics frameworks and tools for analyses of NGS data. I have experience with
+                de-novo genome assembly, chromosome-level assembly, and transcriptomic assembly as well. In addition, I have skills with
+                many programming languages and web/software development tools, such as JavaScript, PHP, HTML, CSS.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
   </div>
 </div>
 
@@ -152,7 +178,7 @@
 <div class="section" id="research">
   <div class="container cc-experience">
 
-    <div class="h4 text-center mb-4 title">Research</div>
+    <div class="h4 text-center mb-4 title">Research Projects</div>
 
     <!--
     <div class="container-fluid">
